Service setup: modified cmakelists and package files to support custom service file messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,13 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   genmsg
+  message_generation
 )
 
+#Declare ROS messages and services
+add_service_files(FILES changeText.srv)
 ## Generate added messages and services
-#generate_messages(DEPENDENCIES std_msgs)
+generate_messages(DEPENDENCIES std_msgs)
 
 ## Declare a catkin package
 catkin_package()
