[CMakeLists]: fixing missing generate message compile error by adding dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,10 @@ add_compile_options(-std=c++11)
 # Find catkin and any catkin packages
 find_package(catkin REQUIRED COMPONENTS
   roscpp
+  rospy
   std_msgs
-  genmsg
   message_generation
+  genmsg
 )
 
 #Declare ROS messages and services
@@ -22,12 +23,14 @@ catkin_package()
 
 ## Build talker and listener
 include_directories(include ${catkin_INCLUDE_DIRS})
+add_dependencies(talker beginner_tutorials_generate_messages_cpp)
 
 add_executable(talker src/talker.cpp)
 target_link_libraries(talker ${catkin_LIBRARIES})
 
 add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
+add_dependencies(listener beginner_tutorials_generate_messages_cpp)
 
 
 
