--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,17 +24,34 @@ catkin_package()
 
 ## Build talker and listener
 include_directories(include ${catkin_INCLUDE_DIRS})
-add_dependencies(talker beginner_tutorials_generate_messages_cpp)
 
 add_executable(talker src/talker.cpp)
 target_link_libraries(talker ${catkin_LIBRARIES})
+add_dependencies(talker beginner_tutorials_generate_messages_cpp)
 
 add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
 add_dependencies(listener beginner_tutorials_generate_messages_cpp)
 
-
-
+## Testing
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  add_rostest_gtest(
+  talkerTest
+  test/talkerTest.launch
+  test/main.cpp
+  test/talkerTest.cpp
+  )
+  target_link_libraries(
+  talkerTest
+  ${catkin_LIBRARIES}
+  )
+  add_dependencies(
+  talker
+  talkerTest
+  ${catkin_EXPORTED_TARGETS}
+  )
+endif()
 
 
 
